--- a/css/css.css
+++ b/css/css.css
@@ -429,7 +429,7 @@ p{
 
 h3{
   color: #fefefe;
-  margin: ;
+  font-size: 1.6em;
 }
 h6{
   text-align: center;
@@ -451,7 +451,7 @@ h6{
   margin-top: 30px;
 }
 .normal{
-  font-weight: 400;
+  font-weight: 300;
 }
 
 @media screen 
