--- a/css/css.css
+++ b/css/css.css
@@ -451,7 +451,7 @@ h6{
   margin-top: 30px;
 }
 .normal{
-  font-weight: 200;
+  font-weight: 100;
 }
 
 @media screen 
@@ -464,14 +464,14 @@ h6{
     h3{
       color: #fefefe;
       margin: ;
-      font-size: 8px;
+      font-size: .5em;
       letter-spacing: 1px;
     }
     h6{
       text-align: center;
       color: #ececec;
       font-weight: bold;
-      font-size: 5px;
+      font-size: .35em;
       letter-spacing: 2px;
     }
     #intro{
