--- a/css/css.css
+++ b/css/css.css
@@ -441,12 +441,17 @@ h6{
   font-weight: 100;
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
 
-.h-menu{
-  display: none;
+
+  .h-menu{
+    display: none;
+  }
+
 }
-
-
 
 #camera{
   display: inline-block;
