--- a/css/css.css
+++ b/css/css.css
@@ -45,8 +45,8 @@ border: 0px solid red;
 
 }
 li{
-	color: #333333;
-	font-size: 1.17em;
+	color: #9a9a9a;
+	font-size: 1em;
 	margin:0px;
 	padding-left: 10vw;
 	border-bottom: 0px solid #fefefe;
