--- a/css/css.css
+++ b/css/css.css
@@ -46,7 +46,7 @@ border: 0px solid red;
 }
 li{
 	color: #666666;
-	font-size: 1em;
+	font-size: 1.06em;
 	margin:0px;
 	padding-left: 10vw;
 	border-bottom: 0px solid #fefefe;
@@ -391,41 +391,8 @@ border: 0px solid blue;
   border: 0px solid red;
   transition: transform .5s ease;
 }
-#latest{
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  
-  top:0px;
 
-  align-items: center;
-  justify-content: space-around;
 
-  border: 0px solid red;
-}
-#latest-textbox{
-text-align: center;
-  top:0px;
-  left: 0px;
-  border: 0px solid blue;
-width: 40%;
-height: 100%;
-margin: auto;
-  
-}
-#camera{
-  margin: auto;
-}
-h4{
-  font-size: 1em;
-  letter-spacing: 1px;
-  font-weight: ;
-}
-p{
-  font-size: 1em;
-  color:#666666;
-  text-align: left;
-}
 
 h3{
   color: #fefefe;
@@ -448,15 +415,49 @@ h6{
   }
 
 
-
-#camera{
-  display: inline-block;
-  width: 30px;
-}
 #latest{
-  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top:2em;
+  border: 1px solid blue;
 }
-
+#latest-textbox{
+  display: flex;
+  flex-wrap: wrap;
+text-align: center;
+top:0px;
+left: 0px;
+border: 1px solid red;
+width: 100%;
+height: 100%;
+}
+#camera-logo{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+top:0px;
+left: 0px;
+border: 1px solid black;
+width: 100%;
+height: 100%;
+}
+#camera{
+  width: 2em;
+  margin: auto;
+}
+h4{
+  font-size: 1em;
+  letter-spacing: 1px;
+  font-weight: ;
+border: 1px solid yellow;
+}
+p{
+  font-size: 1em;
+  color:#666666;
+  text-align: left;
+border: 1px solid green;
+}
 
 @media screen 
   and (min-device-width: 1200px) 
