--- a/css/css.css
+++ b/css/css.css
@@ -451,12 +451,14 @@ h4{
   letter-spacing: 1px;
   font-weight: ;
 border: 1px solid yellow;
+text-align: center;
 }
 p{
   font-size: 1em;
   color:#666666;
   text-align: left;
 border: 1px solid green;
+text-align: center;
 }
 
 @media screen 
