--- a/css/css.css
+++ b/css/css.css
@@ -419,7 +419,7 @@ h6{
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  margin-top:2em;
+  margin-top:1.5em;
   border: 1px solid blue;
 }
 #latest-textbox{
@@ -432,7 +432,7 @@ border: 1px solid red;
 width: 100%;
 height: 100%;
 }
-#camera-logo{
+#camera-box{
   display: flex;
   flex-wrap: wrap;
   text-align: center;
@@ -555,9 +555,54 @@ h4{
   color:#9a9a9a;
 }
 
-#camera{
-  
+#latest{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top:.5em;
+  border: 1px solid blue;
 }
+#latest-textbox{
+  display: flex;
+  flex-wrap: wrap;
+text-align: center;
+top:0px;
+left: 0px;
+border: 1px solid red;
+width: 50%;
+height: 100%;
+}
+#camera-box{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+top:0px;
+left: 0px;
+border: 1px solid black;
+width: 50%;
+height: 100%;
+}
+#camera{
+  width: .5em;
+  margin: auto;
+}
+h4{
+  font-size: .35em;
+  letter-spacing: .1em;
+  font-weight: ;
+border: 1px solid yellow;
+text-align: center;
+margin: auto;
+}
+p{
+  font-size: .3em;
+  color:#666666;
+  text-align: left;
+border: 1px solid green;
+text-align: center;
+margin: auto;
+}
+
 
 
 }
