--- a/css/css.css
+++ b/css/css.css
@@ -420,7 +420,7 @@ h6{
   flex-wrap: wrap;
   width: 100%;
   margin-top:1.5em;
-  border: 1px solid blue;
+  border: 0px solid blue;
 }
 #latest-textbox{
   display: flex;
@@ -428,7 +428,7 @@ h6{
 text-align: center;
 top:0px;
 left: 0px;
-border: 1px solid red;
+border: 0px solid red;
 width: 100%;
 height: 100%;
 }
@@ -438,7 +438,7 @@ height: 100%;
   text-align: center;
 top:0px;
 left: 0px;
-border: 1px solid black;
+border: 0px solid black;
 width: 100%;
 height: 100%;
 }
@@ -450,7 +450,7 @@ h4{
   font-size: 1em;
   letter-spacing: 1px;
   font-weight: ;
-border: 1px solid yellow;
+border: 0px solid yellow;
 text-align: center;
 margin: auto;
 }
@@ -458,7 +458,7 @@ p{
   font-size: 1em;
   color:#666666;
   text-align: left;
-border: 1px solid green;
+border: 0px solid green;
 text-align: center;
 margin: auto;
 }
@@ -560,8 +560,8 @@ h4{
   flex-wrap: wrap;
   width: 100%;
   margin-top:.5em;
-  border: 1px solid blue;
-  height: .5vh;
+  border: 0px solid blue;
+  height: 50vh;
 }
 #latest-textbox{
   display: flex;
@@ -569,7 +569,7 @@ h4{
 text-align: center;
 top:0px;
 left: 0px;
-border: 1px solid red;
+border: 0px solid red;
 width: 50%;
 height: 100%;
 }
@@ -579,7 +579,7 @@ height: 100%;
   text-align: center;
 top:0px;
 left: 0px;
-border: 1px solid black;
+border: 0px solid black;
 width: 50%;
 height: 100%;
 }
@@ -591,7 +591,7 @@ h4{
   font-size: .35em;
   letter-spacing: .1em;
   font-weight: ;
-border: 1px solid yellow;
+border: 0px solid yellow;
 text-align: center;
 margin: auto;
 }
@@ -599,7 +599,7 @@ p{
   font-size: .3em;
   color:#666666;
   text-align: left;
-border: 1px solid green;
+border: 0px solid green;
 text-align: center;
 margin: auto;
 }
