--- a/css/css.css
+++ b/css/css.css
@@ -589,6 +589,7 @@ height: 100%;
 h4{
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   font-size: .35em;
   letter-spacing: .1em;
   font-weight: ;
@@ -600,6 +601,7 @@ height: 50%;
 p{
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   font-size: .3em;
   color:#666666;
   text-align: left;
