--- a/css/css.css
+++ b/css/css.css
@@ -601,10 +601,10 @@ bottom: 0;
 color:#666666;
 }
 .latest-intro{
-
+letter-spacing: .1em;
   display: flex;
   flex-wrap: wrap;
-  font-size: .25em;
+  font-size: .26em;
   color:#9a9a9a;
   text-align: left;
 border: 0px solid green;
