--- a/css/css.css
+++ b/css/css.css
@@ -359,7 +359,7 @@ height: 100%;
   display: flex;
 }
 #banner_img{
-  position: absolute;
+  position: ;
 max-width: 100%;
 height: auto;
 top: 0%;
