--- a/css/css.css
+++ b/css/css.css
@@ -566,6 +566,7 @@ h4{
   border: 0px solid blue;
   height: 25vh;
   z-index: 10;
+  background-color: #f6f6f6;
 }
 #latest-textbox{
   display: block;
