--- a/css/css.css
+++ b/css/css.css
@@ -563,15 +563,15 @@ h4{
   flex-wrap: wrap;
   width: 100%;
   margin-top:.1em;
-  border:0px solid blue;
+  border: 1px solid blue;
   height: 25vh;
   z-index: 10;
   background-color: #f6f6f6;
 }
 #latest-textbox{
   display: block;
- position: relative;
-top:20px;
+ 
+top:0px;
 left: 0px;
 border: 0px solid red;
 width: 50%;
@@ -603,6 +603,7 @@ margin: auto;
 height: 50%;
 bottom: 0;
 color:#666666;
+padding: 10px;
 }
 .latest-intro{
 letter-spacing: .08em;
