--- a/css/css.css
+++ b/css/css.css
@@ -603,7 +603,7 @@ margin: auto;
 height: 50%;
 bottom: 0;
 color:#666666;
-padding: 10px;
+padding-top: 10px;
 }
 .latest-intro{
 letter-spacing: .08em;
