--- a/css/css.css
+++ b/css/css.css
@@ -629,6 +629,35 @@ height: 50%;
 
 
 
+.frame {
+  height: 80vh;
+  overflow: hidden;
+}
+
+.frame ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.frame ul li {
+  float: left;
+  width: 500px;
+  height: 100%;
+  margin: 0 1px 0 0;
+  padding: 0;
+  background: blue;
+  color: red;
+  text-align: center;
+  cursor: pointer;
+}
+
+.frame ul li.active {
+  color: #fff;
+  background: yellow;
+}
+
 
 
 
