--- a/css/css.css
+++ b/css/css.css
@@ -646,7 +646,7 @@ height: 50%;
 
 .frame ul li {
   float: left;
-  width: 500px;
+  width: 100px;
   height: 100%;
   margin: 0 1px 0 0;
   padding: 0;
@@ -661,7 +661,9 @@ height: 50%;
   background: yellow;
 }
 
-
+body{
+  overflow-x: hidden;
+}
 
 
 
