--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 /* Frame */
 
 .frame {
-  height: 250px;
+  height: 150px;
   line-height: 250px;
   overflow: hidden;
 }
@@ -35,19 +35,19 @@ body {
 
 .frame ul li {
   float: left;
-  width: 227px;
+  width: 100px;
   height: 100%;
   margin: 0 1px 0 0;
   padding: 0;
-  background: #333;
-  color: #ddd;
+  background: blue;
+  color: black;
   text-align: center;
   cursor: pointer;
 }
 
 .frame ul li.active {
-  color: #fff;
-  background: #a03232;
+  color: red;
+  background: yellow;
 }
 
 
