--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   height: 100%;
   font-size: 50px;
   flex-wrap: nowrap;
+  display: default;
 }
 
 .frame ul li {
@@ -43,6 +44,8 @@ body {
   color: black;
   text-align: center;
   cursor: pointer;
+  flex-wrap: nowrap;
+  display: default;
 }
 
 .frame ul li.active {
