--- a/css/css.css
+++ b/css/css.css
@@ -45,7 +45,7 @@ border: 0px solid red;
 
 }
 li{
-	/*color: #666666;
+	color: #666666;
 	font-size: 1.06em;
 	margin:0px;
 	padding-left: 10vw;
@@ -55,7 +55,7 @@ li{
 
   display: flex;
   flex-wrap: wrap;
-  align-items: center;*/
+  align-items: center;
 }
 li:hover{
 	cursor: pointer;
@@ -540,14 +540,14 @@ header{
 }
 
 ul{
-  /*list-style-type: none;
+  list-style-type: none;
   padding: 0px;
   margin: 0px;
   background-color: rgba(0,0,0,0);
 border: 0px solid red;
 display: flex;
   flex-wrap: wrap;
- border: 0px solid red;*/
+ border: 0px solid red;
 }
 
 h4{
