--- a/css/css.css
+++ b/css/css.css
@@ -545,7 +545,7 @@ ul{
   margin: 0px;
   background-color: rgba(0,0,0,0);
 border: 0px solid red;
-display: flex;
+/*display: flex;*/
   flex-wrap: wrap;
  border: 0px solid red;
 }
