--- a/css/css.css
+++ b/css/css.css
@@ -359,7 +359,7 @@ height: 100%;
   display: flex;
 }
 #banner_img{
-max-width: 100%;
+max-width: 100vw;
 height: auto;
 top: 0%;
 border: 0px solid blue;
@@ -628,7 +628,7 @@ height: 50%;
 
 
 
-/*excuse me*/
+/*100vw*/
 
 
 
