--- a/css/css.css
+++ b/css/css.css
@@ -12,8 +12,8 @@
 html, body, main{
 	margin: 0px;
 	padding: 0px;
-	height: 100%;
-	width: 100%;
+	height: 100vw;
+	width: 100vh;
 	background-color: #f6f6f6;
   font-family: 'Open Sans', serif;
 }
