--- a/csstoday/css.css
+++ b/csstoday/css.css
@@ -12,14 +12,15 @@
 html, body, main{
 	margin: 0px;
 	padding: 0px;
-	height: 100%;
-	width: 100%;
+	height: 100vw;
+	width: 100vh;
 	background-color: #f6f6f6;
   font-family: 'Open Sans', serif;
 }
 
 body{
   position: relative;
+  overflow-x: hidden;
 
 }
 .overflowhidden{
@@ -34,7 +35,7 @@ main{
 
 }
 */
-ul{
+#drawer ul{
 	list-style-type: none;
 	padding: 0px;
 	margin: 0px;
@@ -44,7 +45,7 @@ border: 0px solid red;
 
 
 }
-li{
+#drawer ul li{
 	color: #666666;
 	font-size: 1.06em;
 	margin:0px;
@@ -57,29 +58,29 @@ li{
   flex-wrap: wrap;
   align-items: center;
 }
-li:hover{
+#drawer ul li:hover{
 	cursor: pointer;
 	background-color: #fefefe;
 }
 .row{
 
-	width: 100%;
+	width: 100vw;
 }
 .col-6{
-	width: 50%;
+	width: 50vw;
 }
 .col-3{
-	width: 33.33%;
+	width: 33.33vw;
 }
 .col-12{
-  width: 100%;
+  width: 100vw;
 }
 
 header{
   
 	display: flex;
 	flex-wrap: wrap;
-	width: 100%;
+	width: 100vw;
 	position: absolute;
   top:0px;
 	
@@ -88,11 +89,11 @@ header{
   align-items: center;
   justify-content: space-around;
 
-  height: 10%;
+  height: 10vh;
 
   transition: transform 0.5s ease;
 
-  border: 0px solid red;
+  border: 1px solid red;
 
   
 
@@ -107,6 +108,7 @@ border-bottom: 1px solid #cccccc;
 
   position: fixed;
   top:0px;
+  height: 10vh;
  
 }
 .header-up{
@@ -152,12 +154,13 @@ transform: translate(-67vw,0);
   
 	*/
   
-	border: 0px solid red;
+	border: 1px solid yellow;
 }
 .girl_img{
 	width: 2em;
 	height: auto;
 	opacity: .6;
+  border: 1px solid red;
 }
 .col-btn{
 	/*
@@ -165,7 +168,7 @@ transform: translate(-67vw,0);
 	padding-bottom: 3vw;
   
 	*/
-  border: 0px solid red;
+  border: 1px solid blue;
 }
  .btn {
 
@@ -359,7 +362,7 @@ height: 100%;
   display: flex;
 }
 #banner_img{
-max-width: 100%;
+max-width: 100vw;
 height: auto;
 top: 0%;
 border: 0px solid blue;
@@ -384,7 +387,7 @@ border: 0px solid blue;
 #main-gray-layer{
   position: fixed;
   left:0px;
-  width: 100%;
+  width: 100vw;
   height : 0%;
   background-color: rgba(0,0,0,.45);
   z-index: 10000;
@@ -418,7 +421,7 @@ h6{
 #latest{
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 100vw;
   margin-top:1.5em;
   border: 0px solid blue;
 
@@ -508,7 +511,7 @@ margin: auto;
 }
 header{
   padding: 0px;
-  border: 0px solid blue;
+  border: 1px solid blue;
   align-items:;
   justify-content:;
   
@@ -539,7 +542,7 @@ header{
   
 }
 
-ul{
+header ul{
   list-style-type: none;
   padding: 0px;
   margin: 0px;
@@ -565,7 +568,7 @@ h4{
  
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 100vw;
   margin-top:.1em;
   border: 0px solid blue;
   height: 25vh;
@@ -628,8 +631,7 @@ height: 50%;
 
 
 
-
-
+/*100vw*/
 
 
 
