--- a/css/css.css
+++ b/css/css.css
@@ -2,25 +2,24 @@
 
 
 *{
-	 -webkit-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
-	}
+  }
 
 
 
 html, body, main{
-	margin: 0px;
-	padding: 0px;
-	height: 100vw;
-	width: 100vh;
-	background-color: #f6f6f6;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: #f6f6f6;
   font-family: 'Open Sans', serif;
 }
 
 body{
   position: relative;
-  overflow-x: hidden;
 
 }
 .overflowhidden{
@@ -29,71 +28,71 @@ body{
 
 /*
 main{
-	position: fixed;
-	transition: transform 0.5s ease;
+  position: fixed;
+  transition: transform 0.5s ease;
   z-index:5;
 
 }
 */
-#drawer ul{
-	list-style-type: none;
-	padding: 0px;
-	margin: 0px;
-	background-color: #ececec;
+ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  background-color: #ececec;
   background-color: #f6f6f6;
 border: 0px solid red;
 
 
 }
-#drawer ul li{
-	color: #666666;
-	font-size: 1.06em;
-	margin:0px;
-	padding-left: 10vw;
-	border-bottom: 0px solid #fefefe;
-	text-align: left;
+li{
+  color: #666666;
+  font-size: 1.06em;
+  margin:0px;
+  padding-left: 10vw;
+  border-bottom: 0px solid #fefefe;
+  text-align: left;
   height: 10vh;
 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-#drawer ul li:hover{
-	cursor: pointer;
-	background-color: #fefefe;
+li:hover{
+  cursor: pointer;
+  background-color: #fefefe;
 }
 .row{
 
-	width: 100vw;
+  width: 100%;
 }
 .col-6{
-	width: 50vw;
+  width: 50%;
 }
 .col-3{
-	width: 33.33vw;
+  width: 33.33%;
 }
 .col-12{
-  width: 100vw;
+  width: 100%;
 }
 
 header{
   
-	display: flex;
-	flex-wrap: wrap;
-	width: 100vw;
-	position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  position: absolute;
   top:0px;
-	
+  
   z-index: 100;
   
   align-items: center;
   justify-content: space-around;
 
-  height: 10vh;
+  height: 10%;
 
   transition: transform 0.5s ease;
 
-  border: 1px solid red;
+  border: 0px solid red;
 
   
 
@@ -108,7 +107,6 @@ border-bottom: 1px solid #cccccc;
 
   position: fixed;
   top:0px;
-  height: 10vh;
  
 }
 .header-up{
@@ -117,17 +115,17 @@ border-bottom: 1px solid #cccccc;
 
 nav{
 
-		width: 67vw;
-		height: 100%;
-		position:fixed;
-		right: -67vw;
+    width: 67vw;
+    height: 100%;
+    position:fixed;
+    right: -67vw;
     
-		transition: transform 0.5s ease;
-		
-		background-color: #f6f6f6;
+    transition: transform 0.5s ease;
+    
+    background-color: #f6f6f6;
 
 
-	}
+  }
 
 
 #content{
@@ -148,27 +146,26 @@ transform: translate(-67vw,0);
 
 .col-girl{
 
-	/*padding-top: 4vw;
-	padding-bottom: 3vw;
-	padding-left: 5vw;
+  /*padding-top: 4vw;
+  padding-bottom: 3vw;
+  padding-left: 5vw;
   
-	*/
+  */
   
-	border: 1px solid yellow;
+  border: 0px solid red;
 }
 .girl_img{
-	width: 2em;
-	height: auto;
-	opacity: .6;
-  border: 1px solid red;
+  width: 2em;
+  height: auto;
+  opacity: .6;
 }
 .col-btn{
-	/*
-	padding-top: 3vw;
-	padding-bottom: 3vw;
+  /*
+  padding-top: 3vw;
+  padding-bottom: 3vw;
   
-	*/
-  border: 1px solid blue;
+  */
+  border: 0px solid red;
 }
  .btn {
 
@@ -197,7 +194,7 @@ transform: translate(-67vw,0);
   background-color: rgba(0,0,0,0);
   border-color: #9a9a9a;
   display: block;
-  margin: auto;	
+  margin: auto; 
 }
 /*
 .btn:focus,
@@ -214,13 +211,13 @@ transform: translate(-67vw,0);
 .btn:hover,
 .btn:focus,
 .btn.focus {
-	z-index:1
+  z-index:1
   color: #333333;
   text-decoration: none;
 }*/
 .btn:active,
 .btn.active {
-	/*z-index:1;
+  /*z-index:1;
   outline: 0;
   background-image: none;
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -234,20 +231,20 @@ transform: translate(-67vw,0);
 }
 
 .menu{
-	/*
-	padding-top: 5vw;
-	padding-bottom: 3vw;
-	padding-right: 5vw;
+  /*
+  padding-top: 5vw;
+  padding-bottom: 3vw;
+  padding-right: 5vw;
  
-	*/
-	 border: 0px solid red;
+  */
+   border: 0px solid red;
 }
 
 #menu_icon{
-	float: right;
+  float: right;
 }
 #menu_icon:hover{
-	cursor: pointer;
+  cursor: pointer;
 }
 
 
@@ -362,7 +359,7 @@ height: 100%;
   display: flex;
 }
 #banner_img{
-max-width: 100vw;
+max-width: 100%;
 height: auto;
 top: 0%;
 border: 0px solid blue;
@@ -387,7 +384,7 @@ border: 0px solid blue;
 #main-gray-layer{
   position: fixed;
   left:0px;
-  width: 100vw;
+  width: 100%;
   height : 0%;
   background-color: rgba(0,0,0,.45);
   z-index: 10000;
@@ -421,7 +418,7 @@ h6{
 #latest{
   display: flex;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
   margin-top:1.5em;
   border: 0px solid blue;
 
@@ -511,7 +508,7 @@ margin: auto;
 }
 header{
   padding: 0px;
-  border: 1px solid blue;
+  border: 0px solid blue;
   align-items:;
   justify-content:;
   
@@ -542,7 +539,7 @@ header{
   
 }
 
-header ul{
+ul{
   list-style-type: none;
   padding: 0px;
   margin: 0px;
@@ -568,7 +565,7 @@ h4{
  
   display: flex;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
   margin-top:.1em;
   border: 0px solid blue;
   height: 25vh;
@@ -631,7 +628,8 @@ height: 50%;
 
 
 
-/*100vw*/
+
+
 
 
 
