--- a/css/css.css
+++ b/css/css.css
@@ -116,7 +116,7 @@ border-bottom: 1px solid #cccccc;
 nav{
 
     width: 67vw;
-    height: 100%;
+    height: 100vh;
     position:fixed;
     right: -67vw;
     
@@ -134,6 +134,7 @@ nav{
   transition: transform 0.5s ease;
   background-color: #f6f6f6;
   z-index: 1;
+  width: 100vw;
 }
 
 
@@ -346,6 +347,7 @@ transform: translate(-67vw,0);
  padding: 0px;
     border: 0px solid red;
     display: inline-block;
+    width: 100vw;
 }
 
 
@@ -384,7 +386,7 @@ border: 0px solid blue;
 #main-gray-layer{
   position: fixed;
   left:0px;
-  width: 100%;
+  width: 100vw;
   height : 0%;
   background-color: rgba(0,0,0,.45);
   z-index: 10000;
@@ -418,7 +420,7 @@ h6{
 #latest{
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 100vw;
   margin-top:1.5em;
   border: 0px solid blue;
 
@@ -565,7 +567,7 @@ h4{
  
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 100vw;
   margin-top:.1em;
   border: 0px solid blue;
   height: 25vh;
