--- a/css/css.css
+++ b/css/css.css
@@ -44,7 +44,7 @@ border: 0px solid red;
 
 
 }
-li{
+#drawer li{
   color: #666666;
   font-size: 1.06em;
   margin:0px;
@@ -57,7 +57,7 @@ li{
   flex-wrap: wrap;
   align-items: center;
 }
-li:hover{
+#drawer li:hover{
   cursor: pointer;
   background-color: #fefefe;
 }
@@ -541,7 +541,7 @@ header{
   
 }
 
-ul{
+.h-menu ul{
   list-style-type: none;
   padding: 0px;
   margin: 0px;
