--- a/css/style.css
+++ b/css/style.css
@@ -4,43 +4,83 @@ body {
 }
 
 
-
-
-
-/* Frame */
-
 .frame {
-  height: 150px;
-  line-height: 250px;
-  overflow: hidden;
-}
+    height: 75vh;
+    line-height: 250px;
+    overflow: hidden;
+  }
 
-.frame ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-size: 50px;
-  
-}
+  .frame ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 50px;
+    
+  }
 
-.frame ul li {
-  float: left;
-  width: 100px;
-  height: 100%;
-  margin: 0 1px 0 0;
-  padding: 0;
-  background: blue;
-  color: black;
-  text-align: center;
-  cursor: pointer;
-  
-  
-}
+  .frame ul li {
+    float: left;
+    width: 80vw;
+    height: 100%;
+    margin: 0 1px 0 0;
+    padding: 0;
+    background: blue;
+    color: black;
+    text-align: center;
+    cursor: pointer;
+    
+    
+  }
 
-.frame ul li.active {
-  color: red;
-  background: yellow;
-}
+  .frame ul li.active {
+    color: red;
+    background: yellow;
+  }
 
+
+
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+  .frame {
+    height: 66vh;
+    line-height: 250px;
+    overflow: hidden;
+  }
+
+  .frame ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 50px;
+    
+  }
+
+  .frame ul li {
+    float: left;
+    width: 33vw;
+    height: 100%;
+    margin: 0 1px 0 0;
+    padding: 0;
+    background: blue;
+    color: black;
+    text-align: center;
+    cursor: pointer;
+    
+    
+  }
+
+  .frame ul li.active {
+    color: red;
+    background: yellow;
+  }
+
+
+}
 
