--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 
 .frame {
-    height: 39vh;
+    height: 64vw;
     line-height: 250px;
     overflow: hidden;
   }
@@ -48,7 +48,7 @@ body {
   and (min-resolution: 192dpi) { 
 
   .frame {
-    height: 25vh;
+    height: 21vw;
     line-height: 250px;
     overflow: hidden;
   }
@@ -64,7 +64,7 @@ body {
 
   .frame ul li {
     float: left;
-    width: 33vw;
+    width: 31vw;
     height: 100%;
     margin: 0 1px 0 0;
     padding: 0;
