--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     line-height: 250px;
     overflow: hidden;
     margin-top: 1.5em; 
+    margin-bottom: 1.5em;
   }
 
   .frame ul {
@@ -55,6 +56,7 @@ body {
     margin-left: 6vw;
     margin-right: 6vw;
     margin-top: .1em; 
+    margin-bottom: .1em;
   }
 
   .frame ul {
