--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,23 @@ body {
   }
 
 
+#release0{
+  background:url(img/0.jpg);
+  background-size:contain;
+  background-repeat:no-repeat;
+}
+#release0{
+  background:url(img/1.jpg);
+  background-size:contain;
+  background-repeat:no-repeat;
+}
+#release0{
+  background:url(img/2.jpg);
+  background-size:contain;
+  background-repeat:no-repeat;
+}
+
+
 
 
 @media screen 
