--- a/css/style.css
+++ b/css/style.css
@@ -45,21 +45,21 @@ body {
   width: 100%;
   height: 100%;
   background:url(../img/0.jpg);
-  background-size:contain;
+  background-size:cover;
   background-repeat:no-repeat;
 }
 #release1{
   width: 100%;
   height: 100%;
   background:url(../img/1.jpg);
-  background-size:contain;
+  background-size:cover;
   background-repeat:no-repeat;
 }
 #release2{
   width: 100%;
   height: 100%;
   background:url(../img/2.jpg);
-  background-size:contain;
+  background-size:cover;
   background-repeat:no-repeat;
 }
 
