--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,49 @@ body {
 }
 
 
+#release3{
+  width: 100%;
+  height: 100%;
+  background:url(../img/3.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+#release4{
+  width: 100%;
+  height: 100%;
+  background:url(../img/4.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+#release5{
+  width: 100%;
+  height: 100%;
+  background:url(../img/5.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
 
+#release6{
+  width: 100%;
+  height: 100%;
+  background:url(../img/6.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+#release7{
+  width: 100%;
+  height: 100%;
+  background:url(../img/7.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+#release8{
+  width: 100%;
+  height: 100%;
+  background:url(../img/8.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
 
 @media screen 
   and (min-device-width: 1200px) 
