--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     height: 100%;
     margin: 0 8px 0 0;
     padding: 0;
-    background: blue;
+    background: #f6f6f6;
     color: black;
     text-align: center;
     cursor: pointer;
@@ -37,7 +37,7 @@ body {
 
   .frame ul li.active {
     color: red;
-    background: yellow;
+    background: #f6f6f6;
   }
 
 
