--- a/css/css.css
+++ b/css/css.css
@@ -61,10 +61,7 @@ border: 0px solid red;
   cursor: pointer;
   background-color: #fefefe;
 }
-.row{
 
-  width: 100vw;
-}
 /*.col-6{
   width: 50%;
 }
@@ -467,15 +464,45 @@ text-align: center;
 margin: auto;
 }
 
+
+
+.row{
+
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
 #gallary{
  display: flex;
   flex-wrap: wrap;
 text-align: center; 
 }
 
+.gallery{
+  height: 66.66vw;
+}
+.gallery-image{
+  height: 80%;
+}
+#pre-wedding-img{
+  width: 100%;
+  height: 100%;
+  background:url(../img/pre-wedding.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+.gallery-text{
+  height: 20%;
+   font-size: 1em;
+  color:#9a9a9a;
+  text-align: left;
+border: 0px solid green;
+text-align: center;
+margin: auto;
 
-
-
+}
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
