--- a/css/css.css
+++ b/css/css.css
@@ -481,10 +481,12 @@ text-align: center;
 }
 
 .gallery{
-  height: 66.66vw;
+  height: 83vw;
+  border: 1px solid blue;
 }
 .gallery-image{
   height: 80%;
+  border: 1px solid red;
 }
 #pre-wedding-img{
   width: 100%;
@@ -494,6 +496,7 @@ text-align: center;
   background-repeat:no-repeat;
 }
 .gallery-text{
+  border: 1px solid yellow;
   height: 20%;
    font-size: 1em;
   color:#9a9a9a;
