--- a/css/css.css
+++ b/css/css.css
@@ -494,8 +494,8 @@ margin-bottom: 1.5em;
   border: 1px solid red;
 }
 #pre-wedding-img{
-  width: 100%;
-  height: 100%;
+ /* width: 100%;
+  height: 100%;*/
   background:url(../img/pre-wedding.jpg);
   background-size:cover;
   background-repeat:no-repeat;
