--- a/css/css.css
+++ b/css/css.css
@@ -498,7 +498,7 @@ margin-bottom: 1.5em;
   background-repeat:no-repeat;
 }
 
-#potrait-img{
+#portrait-img{
   background:url(../img/portrait.jpg);
   background-size:cover;
   background-repeat:no-repeat;
