--- a/css/css.css
+++ b/css/css.css
@@ -484,11 +484,13 @@ margin-bottom: 1.5em;
 
 
 .gallery{
-  height: 74vw;
+  /*height: 74vw;*/
   border: 1px solid blue;
+  margin-bottom: 
 }
 .gallery-image{
-  height: 90%;
+  /*height: 90%;*/
+  height: 66.666vw;
   border: 1px solid red;
 }
 
@@ -520,13 +522,15 @@ margin-bottom: 1.5em;
 
 .gallery-text{
   border: 1px solid yellow;
-  height: 10%;
+  /*height: 10%;*/
   font-size: 1em;
   color:#9a9a9a;
   text-align: left;
   border: 1px solid green;
   text-align: center;
   margin: auto;
+  padding-top: .7em;
+  padding-top: .7em;
 
 }
 @media screen 
