--- a/css/css.css
+++ b/css/css.css
@@ -530,7 +530,7 @@ margin-bottom: 1.5em;
   text-align: center;
   margin: auto;
   padding-top: .7em;
-  padding-top: .7em;
+  padding-bottom: .7em;
 
 }
 @media screen 
