--- a/css/css.css
+++ b/css/css.css
@@ -478,7 +478,7 @@ margin: auto;
  display: flex;
   flex-wrap: wrap;
 text-align: center; 
-margin-bottom: 1.5em;
+margin-bottom: 1em;
 }
 
 
@@ -486,7 +486,7 @@ margin-bottom: 1.5em;
 .gallery{
   /*height: 74vw;*/
   border: 0px solid blue;
-  margin-bottom: 
+  margin-top: .5em; 
 }
 .gallery-image{
   /*height: 90%;*/
