--- a/css/css.css
+++ b/css/css.css
@@ -420,7 +420,7 @@ h6{
   width: 100vw;
   margin-top:1.5em;
   border: 0px solid blue;
-
+  background-color: white;
 }
 #latest-textbox{
   display: flex;
