--- a/css/css.css
+++ b/css/css.css
@@ -440,7 +440,7 @@ left: 0px;
 border: 0px solid red;
 width: 100%;
 height: 100%;
-padding-top:30%;
+padding-top: 10vh;
 }
 #camera-box{
   display: flex;
@@ -678,7 +678,7 @@ h4{
   letter-spacing: .1em;
   font-weight: ;
 
-text-align: center;
+text-align: left;
 margin: auto;
 height: 50%;
 bottom: 0;
@@ -691,7 +691,7 @@ letter-spacing: .08em;
   flex-wrap: wrap;
   font-size: .3em;
   color:#9a9a9a;
-  text-align: center;
+  text-align: left;
 border: 0px solid green;
 text-align: left;
 margin: auto;
