--- a/css/css.css
+++ b/css/css.css
@@ -391,6 +391,10 @@ border: 0px solid blue;
   transition: transform .5s ease;
 }
 
+.myname{
+  color: #fefefe;
+  font-size: 1.5em;
+}
 
 
 h3{
@@ -442,6 +446,10 @@ width: 100%;
 height: 100%;
 padding-top: 10vh;
 }
+.latest-text{
+  color: #fefefe;
+  text-align: center;
+}
 #camera-box{
   display: flex;
   flex-wrap: wrap;
@@ -472,6 +480,7 @@ color:#666666;
 border: 0px solid green;
 text-align: center;
 margin: auto;
+color: #ececec;
 }
 
 
@@ -547,9 +556,14 @@ margin-bottom: .5em;
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
+.myname{
+      color: #fefefe;
+      margin: ;
+      font-size: .6em;
+      letter-spacing: .1em;
+}
 
-
-    h3{
+    .h3{
       color: #fefefe;
       margin: ;
       font-size: .6em;
@@ -655,8 +669,12 @@ display: flex;
 top:0px;
 left: 0px;
 border: 0px solid red;
-width: 50%;
+width: 100%;
 height: 100%;
+}
+.latest-text{
+  color: #fefefe;
+  text-align: center;
 }
 #camera-box{
   display: flex;
@@ -691,9 +709,9 @@ letter-spacing: .08em;
   flex-wrap: wrap;
   font-size: .3em;
   color:#9a9a9a;
-  text-align: left;
+  color:#ececec;
+  text-align: center;
 border: 0px solid green;
-text-align: left;
 margin: auto;
 height: 50%;
 }
