--- a/css/css.css
+++ b/css/css.css
@@ -446,7 +446,7 @@ width: 100%;
 height: 100%;
 padding-top: 10vh;
 }
-.latest-text{
+#latest-text{
   color: #fefefe;
   text-align: center;
 }
@@ -672,7 +672,7 @@ border: 0px solid red;
 width: 100%;
 height: 100%;
 }
-.latest-text{
+#latest-text{
   color: #fefefe;
   text-align: center;
 }
