--- a/css/css.css
+++ b/css/css.css
@@ -699,8 +699,11 @@ padding-top: 10px;
 .latest-intro{
 letter-spacing: .08em;
   
+  font-size: .3em;
+  color:#9a9a9a;
+  color:#ececec;
+  
 }
-.
 
 .gallary-title{
 
