--- a/css/css.css
+++ b/css/css.css
@@ -345,7 +345,7 @@ transform: translate(-67vw,0);
     border: 0px solid red;
     display: inline-block;
     width: 100vw;
-    margin-bottom: 1em;
+
 }
 
 
@@ -499,6 +499,7 @@ margin-top: .2em;
 
 text-align: center; 
 margin-bottom: .5em;
+margin-top: 1em;
 }
 
 
@@ -712,6 +713,7 @@ letter-spacing: .08em;
 
 text-align: center; 
 margin-bottom: 1em;
+margin-top: .5em;
 }
 
 
