--- a/css/css.css
+++ b/css/css.css
@@ -427,6 +427,7 @@ h6{
   flex-wrap: wrap;*/
   width: 100vw;
   margin-top:1.5em;
+  margin-bottom: 2em;
   border: 0px solid blue;
   background:url(../img/latest-release-banner.jpg);
   background-position: center;
@@ -664,9 +665,9 @@ display: flex;
   margin-top:.1em;
   border: 0px solid blue;
   height: 45vh;
-  
-
   background-attachment: fixed;
+  margin-top: 4vw;
+  margin-bottom: 4vw;
 }
 #latest-textbox{
  
