--- a/css/css.css
+++ b/css/css.css
@@ -560,7 +560,8 @@ margin-bottom: .5em;
 
 
 #me-image{
-  background:url("../img/me-image.jpg");
+  border: 1px solid red;
+  background:url(../img/me-image.jpg);
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
