--- a/css/css.css
+++ b/css/css.css
@@ -785,6 +785,45 @@ margin-left: 4vw;
 
 
 
+#me-image{
+  border: 0px solid red;
+  background:url(../img/me-image.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position: center;
+  height: 55vw;
+  display: flex;
+
+}
+#me-title{
+  color: #fefefe;
+  text-align: center;
+  margin: auto;
+}
+#me-intro-box{
+  
+  padding: 4vw;
+  text-align: left;
+}
+#me-intro-p{
+ 
+  font-size: 1em;
+  color:#9a9a9a;
+  
+  text-align: left;
+  margin: auto;
+
+
+}
+
+
+
+
+
+
+
+
+
 }
 
 
