--- a/css/css.css
+++ b/css/css.css
@@ -794,7 +794,9 @@ margin-left: 4vw;
   background-position: center;
   height: 50vw;
   display: inline;
-
+  padding-left: 4vw;
+  padding-top: 4vw;
+  
 }
 #me-title{
   color: #fefefe;
@@ -809,7 +811,7 @@ margin-left: 4vw;
   position: absolute;
   top: 0px;
   left: 0px;
-  margin-top: 10%;
+  margin-top: 20%;
   width: 60%;
   border: 1px solid red;
 
