--- a/css/css.css
+++ b/css/css.css
@@ -814,7 +814,7 @@ margin-left: 4vw;
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
-  height: 30vw;
+  height: 45vh;
   display: inline;
   padding-left: 8vw;
   padding-top: 8vw;
