--- a/css/css.css
+++ b/css/css.css
@@ -570,7 +570,7 @@ margin-bottom: .5em;
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
-  height: 50vw;
+  height: 30vh;
   display: flex;
 
 }
