--- a/css/css.css
+++ b/css/css.css
@@ -597,6 +597,7 @@ margin-bottom: .5em;
 
 #contact{
   display: flex;
+  position: relative;
 }
 #contact-img{
     border: 0px solid red;
@@ -605,12 +606,38 @@ margin-bottom: .5em;
   background-repeat:no-repeat;
   background-position: center;
   height: 50vw;
-  display: flex;
+  boder: 1px solid blue;
 }
 #contact-text{
-
+ position: absolute;
+ top: 0;
+ left: 0;
+ display: flex;
+ boder: 1px solid green;
 }
-
+#contact-title{
+   color: #fefefe;
+  text-align: center;
+  margin: auto;
+}
+#contact-info{
+  boder: 1px solid red;
+}
+.contact-style{
+font-size: 1em;
+  color:#9a9a9a;
+  text-align: left;
+  font-weight: bold;
+color: #ececec;
+margin-top: .2em;
+}
+.contact-content{
+  font-size: 1em;
+  color:#9a9a9a;
+  text-align: left;
+color: #ececec;
+margin-top: .2em;
+}
 
 @media screen 
   and (min-device-width: 1200px) 
