--- a/css/css.css
+++ b/css/css.css
@@ -631,7 +631,10 @@ font-size: 1em;
   
   text-align: left;
 }
-
+a[href^="tel"]{
+    color:inherit;
+    text-decoration:none;
+}
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
