--- a/css/css.css
+++ b/css/css.css
@@ -907,13 +907,13 @@ border: 0px solid yellow;
   padding: 6vw;
 }
 .contact-style{
-font-size: 1em;
+font-size: .3em;
   color:#9a9a9a;
   
   text-align: left;
 }
 .contact-content{
-  font-size: 1em;
+  font-size: .3em;
   color:#9a9a9a;
   
   text-align: left;
