--- a/css/css.css
+++ b/css/css.css
@@ -900,6 +900,7 @@ border: 0px solid yellow;
    color: #fefefe;
   text-align: center;
   margin: auto;
+  border: 1px solid red;
 }
 #contact-info{
   width: 33.33%;
@@ -909,13 +910,13 @@ border: 0px solid yellow;
 .contact-style{
 font-size: .3em;
   color:#9a9a9a;
-  
+  display: block;
   text-align: left;
 }
 .contact-content{
   font-size: .3em;
   color:#9a9a9a;
-  
+  display: block;
   text-align: left;
 }
 
